--- a/Landing Page/style.css
+++ b/Landing Page/style.css
@@ -188,12 +188,12 @@ text-align: left;}
    font-size: 35px;
    text-align: center;
    color: #000;
-   margin: 40px 0 20px;
+   margin: 40px 0 10px;
 }
 .heading-info{
    text-align: center;
    color: rgb(56, 56, 56);
-   font-size: 22px;
+   font-size: 20px;
 }
 
 section#about{
@@ -322,6 +322,17 @@ form input{
 textarea{
    margin-top: 25px;
 }
+form input[type="submit"]{
+   background: #292929;
+   color: white;
+   cursor: pointer;
+   transition: .3s;
+   border: 2px solid #292929;
+}
+form input[type="submit"]:hover{
+   background: transparent;
+   color: #292929;
+}
 
 
 
@@ -331,7 +342,7 @@ footer{
    height: 20vh;
    color: #000;
    margin-top: 100px;
-   background: rgb(41, 41, 41);
+   background: #292929;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
